# skbuild_poc

./: .gitignore  CMakeLists.txt  pyproject.toml
lib/: src.cpp  src.h
pylib/: __init__.py  bindings.cpp
